--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "otp-generator": "^4.0.1",
+    "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "unirest": "^0.6.0"
   }
