--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ Cloudinary
 CLOUD_NAME=dknrega1a
 API_KEY=887429873527267
 API_SECRET=_7n1hoKyEIuiCzmN9Ov3NUugUjo
+
+# rzp_test_RKBOWAbKPBphK8 key id
+
+# p9tDQRsEbd6R95oWee06ojij Key Secret
