--- a/.env
+++ b/.env
@@ -12,6 +12,9 @@ CLOUD_NAME=dknrega1a
 API_KEY=887429873527267
 API_SECRET=_7n1hoKyEIuiCzmN9Ov3NUugUjo
 
+RAZORPAY_KEY_ID=rzp_test_RKBOWAbKPBphK8
+RAZORPAY_KEY_SECRET=p9tDQRsEbd6R95oWee06ojij
+
 # rzp_test_RKBOWAbKPBphK8 key id
 
 # p9tDQRsEbd6R95oWee06ojij Key Secret
